fixed date report layout issue introduced earlier, fix for normalize_email rake task, renamed date request titles on wingmate page

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1068,7 +1068,7 @@ h2, h3 {
 		}
 	}
 	
-	> .form-item {
+	> .form-item, > div > .form-item, > div > div > .form-item {
 		padding: 10px 15px;
 		position: relative;
 		
